--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ MarkupSafe==3.0.2
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 Werkzeug==3.1.2
+gunicorn==20.1.0
+mysqlclient==2.1.0
+psycopg2==2.9.5
+python-dotenv==0.21.0
