--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ Werkzeug==3.1.2
 gunicorn==20.1.0
 mysqlclient==2.1.0
 psycopg2==2.9.5
-python-dotenv==0.21.0
+pymysql==1.1.0
+python-dotenv==1.0.0
