--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,5 @@ src/scss/_themes.scss
 # Eleventy
 # We generate our own .eleventyignore file dynamically during builds
 .eleventyignore
+
+instance/*.db
